shifting to shortened image because fixed does not work on mobile

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ html {
 }
 body {
 	/* background: url('images/20.jpg'); */
-	background: url('../../../../themes/911/images/bg.jpg') no-repeat center top fixed;
+	background: url('../../../../themes/911/images/bg_small.jpg') no-repeat center top fixed;
 	background-size: cover;	
         -webkit-background-size: cover;
         -moz-background-size: cover;
@@ -641,9 +641,6 @@ footer {
 ------------------------------------------------------------ */
 
 @media screen and (max-width:800px){
-	body {
-		background: url('../../../../themes/911/images/bg_small.jpg') no-repeat center top fixed;
-	}
 	#page {
 		width:100%;
 		float:left;
